@@ -1,3 +1,6 @@
+20010622
+ - (stevesk) handle systems without pw_expire and pw_change.
+
 20010621
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/06/16 08:49:38
@@ -5678,4 +5681,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1296 2001/06/21 03:19:23 mouring Exp $
+$Id: ChangeLog,v 1.1297 2001/06/22 21:14:18 stevesk Exp $
